[tool.poetry]
name = "mq_methods"
version = "0.1.0"
description = ""
authors = ["bilenko-ol <bilenko.le@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiormq = "^6.4.2"
nest-asyncio = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
